objects/CoveredOrganization__c.object
<CustomObject>
    <fields>
        <fullName>Attention_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attention To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Covered_Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CountryOfOrganization__c</fullName>
        <formula>Organization__r.RCCountry__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_CountryOfOrganization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Organization</label>
        <referenceTo>BusinessRiskEscalationEntity__c</referenceTo>
        <relationshipLabel>Covered Organizations</relationshipLabel>
        <relationshipName>Covered_BU_s_Geography</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Return Plant</label>
        <referenceTo>Plant__c</referenceTo>
        <relationshipLabel>Covered Organizations</relationshipLabel>
        <relationshipName>Covered_BU_s_Geography</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Quality_Alert__c</fullName>
        <label>Product Quality Alert</label>
        <referenceTo>Product_Quality_Alert__c</referenceTo>
        <relationshipName>Covered_BU_s_Geography</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Covered Organization</label>
    <nameField>
        <displayFormat>CBG-{00000}</displayFormat>
        <label>Covered BU/Geography Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Covered Organizations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>